# Quilt

./: .gitignore  .gitmodules  CMakeLists.txt  Quilt.sln  README.md  craft.c
Quilt/: CMakeLists.txt  Quilt.vcxproj  Quilt.vcxproj.filters  bio.c  bio.h  config.c  config.h  main.c  main.cpp  tls_engine.c  tls_engine.h  truststore.txt  uv_tls.c  uv_tls.h
QuiltServer/: CMakeLists.txt  QuiltServer.vcxproj  QuiltServer.vcxproj.filters  config.c  config.h  main.c  main.cpp  simple_buffer.c  tls.c
QuiltShared/: CMakeLists.txt  QuiltShared.vcxproj  QuiltShared.vcxproj.filters  getopt.c  getopt.h  json.c  simple_buffer.c  simple_buffer.h  tls.c  tls.h  utils.c  utils.h
cmake/: FindLibuv.cmake  FindMbedTLS.cmake  common.cmake
cmake/uv/: CMakeLists.txt
